# dispatch

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/order-service/: Cargo.toml
crates/order-service/src/: app.rs  db.rs  lib.rs  main.rs  models.rs
crates/order-service/src/handlers/: orders.rs
crates/order-service/tests/: orders_api.rs
migrations/: 001_create_orders.sql  002_add_idempotency_key.sql  003_scope_idempotency_to_customer.sql  004_create_order_outbox.sql  005_create_dispatch_jobs_table.sql
